fix(feature-popup): Fix bug where feature-popup would appear behind the sidebar element

--- a/src/styles/components/layout/FeaturePopup.scss
+++ b/src/styles/components/layout/FeaturePopup.scss
@@ -1,62 +1,79 @@
-.feature-popup-wrapper {
-    position: relative;
-    /* Position relative to parent */
-    display: inline-block;
+.feature-popup-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 9998;
+    pointer-events: none;
 
-    .popup-window {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 2rem;
+
+    .feature-popup-window {
         position: absolute;
-        top: 100%;
-        left: 50%;
-        transform: translateX(-50%);
+        z-index: 9999;
+        pointer-events: auto;
+        width: 225px;
+        height: auto;
+        max-width: calc(100% - 4rem);
+
         display: flex;
         flex-direction: row;
-        align-items: center;
+        align-items: flex-start;
+        justify-content: flex-start;
+
         background: linear-gradient(360deg, #503260 0%, #211D17 39.56%), #211D17;
-        color: #af8768;
-        padding: 0.75rem;
+        padding: 0.40rem 0.75rem 0.75rem 0.75rem;
         border: 1px solid #B7854D;
         border-radius: 10px;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset -7px -7px 4px rgba(0, 0, 0, 0.1), inset 7px 7px 4px rgba(0, 0, 0, 0.1);
-        z-index: 9999;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
+            inset -7px -7px 4px rgba(0, 0, 0, 0.1),
+            inset 7px 7px 4px rgba(0, 0, 0, 0.1);
         font-size: 0.875rem;
-        width: 300px;
-        gap: 1rem;
-        overflow: visible;
 
         .popup-content {
-            flex: 4;
+            flex: 7;
             display: flex;
             flex-direction: column;
-            gap: 0.5rem;
 
             .popup-title {
-                font-size: 1rem;
                 font-weight: bold;
                 margin: 0;
+
+                color: white;
             }
 
             .popup-subtitle {
-                font-size: 0.875rem;
                 margin: 0;
                 opacity: 0.8;
+                padding-top: 0.10rem;
+
+                color: #af8768;
             }
 
             .popup-text {
-                font-size: 0.75rem;
                 margin: 0;
+                padding-top: 0.35rem;
+
+                color: #af8768;
             }
         }
 
         .popup-image-container {
-            flex: 1;
+            flex: 3;
             display: flex;
             justify-content: center;
             align-items: center;
+            max-height: 50px;
 
             .popup-image {
-                max-width: 100%;
-                max-height: 100%;
+                max-width: 140%;
                 border-radius: 5px;
+                transform: translate(15px, -9px);
             }
         }
     }
